multichat/03_tcp/bridge/base/0-03-tcp-namespace.yaml
#! 0-03-tcp-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
