multichat/03_tcp/bridge/base/rest-api-deployment.yaml
#! rest-api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rest-api
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: rest-api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: 03_tcp
            com.docker.compose.service: rest-api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: 03_tcp
                com.docker.compose.service: rest-api
                com.docker.compose.network.chat-net: "true"
        spec:
            containers:
                - name: rest-api
                  image: 03_tcp-rest-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: rest-api-3000
                      containerPort: 3000
                    - name: rest-api-5001
                      containerPort: 5001
