multichat/03_tcp/bridge/base/server-deployment.yaml
#! server-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: server
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: 03_tcp
            com.docker.compose.service: server
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: 03_tcp
                com.docker.compose.service: server
                com.docker.compose.network.chat-net: "true"
        spec:
            containers:
                - name: server
                  image: 03_tcp-server
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: server-10000
                      containerPort: 10000
                    - name: server-12345
                      containerPort: 12345
                    - name: server-8888
                      containerPort: 8888
