multichat/03_tcp/bridge/base/web-client-deployment.yaml
#! web-client-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-client
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: web-client
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: 03_tcp
            com.docker.compose.service: web-client
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: 03_tcp
                com.docker.compose.service: web-client
                com.docker.compose.network.chat-net: "true"
        spec:
            containers:
                - name: web-client
                  image: 03_tcp-web-client
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: web-client-80
                      containerPort: 80
