multichat/03_tcp/bridge/base/rest-api-expose.yaml
#! rest-api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: rest-api
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: rest-api
spec:
    selector:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: rest-api
    ports:
        - name: rest-api-3000
          port: 3000
          targetPort: rest-api-3000
        - name: rest-api-5001
          port: 5001
          targetPort: rest-api-5001
