multichat/03_tcp/bridge/base/rest-api-service.yaml
# check if there is at least one published port

#! rest-api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: rest-api-published
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: rest-api
spec:
    selector:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: rest-api
    ports:
        - name: rest-api-3000
          port: 3000
          protocol: TCP
          targetPort: rest-api-5001

# check if there is at least one published port
