multichat/03_tcp/bridge/base/server-expose.yaml
#! server-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: server
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: server
spec:
    selector:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: server
    ports:
        - name: server-10000
          port: 10000
          targetPort: server-10000
        - name: server-12345
          port: 12345
          targetPort: server-12345
        - name: server-8888
          port: 8888
          targetPort: server-8888
