multichat/03_tcp/bridge/base/server-service.yaml
#! server-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: server-published
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: server
spec:
    selector:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: server
    ports:
        - name: server-10000
          port: 10000
          protocol: TCP
          targetPort: server-10000
        - name: server-8888
          port: 8888
          protocol: TCP
          targetPort: server-8888
        - name: server-12345
          port: 12345
          protocol: TCP
          targetPort: server-12345

# check if there is at least one published port
