multichat/03_tcp/bridge/base/web-client-service.yaml
#! web-client-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: web-client-published
    namespace: 03-tcp
    labels:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: web-client
spec:
    selector:
        com.docker.compose.project: 03_tcp
        com.docker.compose.service: web-client
    ports:
        - name: web-client-8080
          port: 8080
          protocol: TCP
          targetPort: web-client-80
